Revise manifest.json for branding and details
Updated the manifest to reflect new branding and description.

--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,25 @@
-{
-    "name": "iEMS Energieanalyse",
-    "short_name": "iEMS",
-    "start_url": "index.html",
+ {
+    "name": "iEMS Energie-Analyse Dashboard © by von Bernsdorf",
+    "short_name": "iEMS © by von Bernsdorf",
+    "description": "Das Energie-Analyse-Dashboard visualisiert den Gesamtenergiefluss, indem es den Verbrauch, die selbst erzeugte PV-Energie und die PV-Netz-Rückspeisung gegenüberstellt. Bei einer vorhandenen Batterie zeigt es deren Ausnutzungsdaten.\nIst ein Batteriespeicher nicht vorhanden, wird das Potenzial zur Eigenverbrauchsoptimierung und zur Reduzierung der Netzeinspeisung aufgezeigt.",
+    "theme_color": "#03a9f4",
+    "background_color": "#5a0fc8",
     "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#317EFB",
-    "description": "Progressive Web App zur Analyse von Energieflüssen und Kosten basierend auf config.iEMS und CSV-Dateien.",
+    "orientation": "portrait",
+    "scope": "https://sites.google.com/view/bkw-niederrhein/iems",
+    "start_url": "https://sites.google.com/view/bkw-niederrhein/iems",
     "icons": [
         {
-            "src": "icons/icon-192.png",
+            "src": "icons/icon_192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any"
         },
         {
-            "src": "icons/icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
+            "src": "icons/maskable_192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ]
 }
